[package]
name = "rust-web-app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
hyper = { version = "1.3.1", features = ["full"] }
tokio = { version = "1.38", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["trace"] }
mime = "0.3.17"
serde = { version = "1.0.203", features = ["derive"]}
serde_json = "1.0.119"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
anyhow = "1.0.86"
thiserror = "1.0.61"
http-body-util = "0.1.2"
